maep (1.3.2) unstable; urgency=low

  * Fixed crash when wikipedia was disabled while balloon was visible
  * Fixed bug tracker link
  * Screensaver disabled only when map has focus
  * GPS framework simplified and reduced power consumption

 -- Till Harbaum <till@harbaum.org>  Wed, 27 Jan 2010 09:09:13 +0100

maep (1.3.1) unstable; urgency=low

  * Inclusion of altitude from GPS into track
  * Closed icon memory leak
  * Allow cancellation of search
	
 -- Till Harbaum <till@harbaum.org>  Sun, 24 Jan 2010 20:47:58 +0100

maep (1.3) unstable; urgency=low

  * Display wikipedia links
  * Major internal changes in osm-gps-map
  * Small usability updates on search
	
 -- Till Harbaum <till@harbaum.org>  Wed, 13 Jan 2010 18:47:21 +0100

maep (1.2) unstable; urgency=low

  * Places search

 -- Till Harbaum <till@harbaum.org>  Mon, 11 Jan 2010 21:47:30 +0100

maep (1.1.3) unstable; urgency=low

  * Fixed /opt symlink

 -- Till Harbaum <till@harbaum.org>  Sun, 10 Jan 2010 08:56:10 +0100

maep (1.1.2) unstable; urgency=low

  * Fixed /opt binary location

 -- Till Harbaum <till@harbaum.org>  Sun, 10 Jan 2010 08:07:44 +0100

maep (1.1.1) unstable; urgency=low

  * Fixed missing browser dependency
  * manually optified executable

 -- Till Harbaum <till@harbaum.org>  Sat, 09 Jan 2010 20:27:44 +0100

maep (1.1) unstable; urgency=low

  * Added application menu
  * Added about box
  * Added /opt-ified icon processing
  * Added browser interface
  * Added track import/export/capture
  * Enabled auto /opt-ification for binary/app icons/...
  * Disable screen saver over ~3kph
  * Moved tile cache to /home/user/MyDocs/.maps on fremantle
	
 -- Till Harbaum <till@harbaum.org>  Mon, 28 Dec 2009 10:34:22 +0100

maep (1.0.2) unstable; urgency=low

  * Fixed GPS disable on diablo/chinook
  * Optimized map center handling
	
 -- Till Harbaum <till@harbaum.org>  Thu, 24 Dec 2009 20:38:43 +0100

maep (1.0.1) unstable; urgency=low
