@@ -4,7 +4,8 @@ maep (1.3.2) unstable; urgency=low
   * Fixed bug tracker link
   * Screensaver disabled only when map has focus
   * GPS framework simplified and reduced power consumption
-
+  * Reduced "drag" threshold
+	
  -- Till Harbaum <till@harbaum.org>  Wed, 27 Jan 2010 09:09:13 +0100
 
 maep (1.3.1) unstable; urgency=low
